cupt (2.5.9~) UNRELEASED; urgency=low

  * 

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 06 Aug 2012 20:03:23 +0300

cupt (2.5.8) unstable; urgency=low

  * lib:
    - cache/binaryversion:
      - 'parseFromFile': the field 'Description-md5' should be parsed together
        with info-only fields even if Version::parseOthers is off.
        (Closes: #681340)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 14 Jul 2012 13:55:39 +0300

cupt (2.5.7) unstable; urgency=low

  * lib:
    - cache:
      - Parsing sources list: parse afterline comments properly. Thanks to
        Alexey Ivanov for the report. (Closes: #678345)
  * doc:
    - tutorial:
      - 'Disadvantages': said specificly that multiarch is not supported.
  * po:
    - Added German translation by Chris Leick. (Closes: #677758)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 28 Jun 2012 14:03:52 +0300

cupt (2.5.6) unstable; urgency=low

  * lib:
    - system/worker:
      - Fatal errors should be logged regardless of the logging level.
      - Work around FreeBSD kernels on which mkdir(2) sometimes return EISDIR.
        Thanks to goneri@rulezlan.org for the report. (Closes: #675760)
  * po:
    - Added French translation by Julien Patriarca. (Closes: #675689)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 08 Jun 2012 13:01:55 +0300

cupt (2.5.5) unstable; urgency=low

  * lib:
    - download/methodfactory:
      - Loading download methods: fixed a crash when a download method library
        filename without extension contains less than 3 characters. Also,
        don't output a debug messages in this case when the debugging is not
        turned on.
    - cache/sourceversion:
      - 'parseFromFile': accept the value 'source' as if it was 'extra' for
        'Priority' field (a workaround for #626394).
    - Parsing Release files: fixed mixing unknown hash sum types and known
      hash sum values which leads to a wrong 'hash sums mismatch' error.