@@ -48,11 +48,10 @@ Uri::Uri(const string& uri)
 	if (uri[__data->hostStartPosition] == '/')
 	{
 		// "//" is dropped
-		if (uri.size() < __data->hostStartPosition + 2 || uri[__data->hostStartPosition+1] != '/')
+		if (uri.size() >= __data->hostStartPosition + 2 && uri[__data->hostStartPosition+1] == '/')
 		{
-			fatal2(__("there should be no or two slashes after a colon in the URI '%s'"), uri);
+			__data->hostStartPosition += 2;
 		}
-		__data->hostStartPosition += 2;
 	}
 }
 
