@@ -1,6 +1,10 @@
 cupt (2.5.9~) UNRELEASED; urgency=low
 
-  * 
+  * lib:
+    - download/uri:
+      - Constructor: accept single- or triple-slashes after the ':' character,
+        which is the usual situation for 'file' or 'copy' schemes.
+        Thanks to Alexey Ivanov for the report. (Closes: #683873)
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 06 Aug 2012 20:03:23 +0300
 
